# robot_dc

./: .gitignore  .gitmodules  ACTION_MODE_SETUP.md  MIGRATION_PLAN.md  README.md  requirements.txt  task_completion_flow_analysis.md
colcon_ws/: .gitignore  (+2 more)
colcon_ws/src/cam/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/cam/cam/: cam_node.py
colcon_ws/src/cam/launch/: cam_launch.py
colcon_ws/src/cam_node/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/cam_node/cam_node/: __init__.py  cam_node.py
colcon_ws/src/cam_node/launch/: cam_launch.py  cam_stream_web.py  camera_web_launch.py
colcon_ws/src/cam_node/resource/: cam_node
colcon_ws/src/cartesian_controller_node/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/cartesian_controller_node/cartesian_controller_node/: calibration_data_recorder.py  ft_calibrator.py  joystick_calibration_node.py  joystick_compliance_control_node.py  joystick_force_control_node.py  utils.py  zero_force_control_node.py
colcon_ws/src/cartesian_controller_node/launch/: calibration_data_recorder.launch.py  joystick_calibration.launch.py  joystick_compliance_control.launch.py  joystick_force_control.launch.py  zero_force_control.launch.py
colcon_ws/src/common/: package.xml  setup.py
colcon_ws/src/common/common/: __init__.py  workspace_utils.py
colcon_ws/src/common/test/: README.md  __init__.py  test_config_manager.py  test_workspace_utils.py
colcon_ws/src/detector/: README.md  package.xml  setup.py
colcon_ws/src/detector/detector/: detector_node.py
colcon_ws/src/detector/launch/: detector_launch.py
colcon_ws/src/draw_wire_sensor/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/draw_wire_sensor/draw_wire_sensor/: draw_wire_sensor_controller.py  draw_wire_sensor_node.py
colcon_ws/src/draw_wire_sensor/launch/: draw_wire_sensor.launch.py
colcon_ws/src/duco_gcr5_910_urdf/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/duco_gcr5_910_urdf/config/: display.rviz
colcon_ws/src/duco_gcr5_910_urdf/launch/: display.launch  display_headless.launch.py  display_simple.launch.py  display_web.launch.py  gazebo.launch  gazebo.launch.py  robot_state_only.launch.py
colcon_ws/src/duco_gcr5_910_urdf/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
colcon_ws/src/duco_gcr5_910_urdf/textures/: .gitkeep
colcon_ws/src/duco_gcr5_910_urdf/urdf/: duco_gcr5_910_urdf.csv  duco_gcr5_910_urdf.urdf
colcon_ws/src/duco_hardware/: CMakeLists.txt  duco_hardware.xml  package.xml
colcon_ws/src/duco_hardware/src/: duco_hardware_interface.cpp
colcon_ws/src/duco_robot_arm_state/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/duco_robot_arm_state/duco_robot_arm_state/: __init__.py  duco_robot_arm_state_node.py  robot_data.py
colcon_ws/src/duco_robot_arm_state/launch/: duco_robot_arm_full.launch.py  duco_robot_arm_state.launch.py
colcon_ws/src/duco_robot_arm_state/resource/: duco_robot_arm_state
colcon_ws/src/duco_robot_arm_state/test/: test_duco_robot_arm_state_node.py  test_robot_data.py
colcon_ws/src/duco_ros_driver/: CMakeLists.txt  CMakeLists.txt.user.022508e  package.xml
colcon_ws/src/duco_ros_driver/config/: duco_robot_control.yaml
colcon_ws/src/duco_ros_driver/launch/: duco_robot_control.launch.py
colcon_ws/src/duco_ros_driver/src/: DucoRobotStatus.cpp
colcon_ws/src/duco_ros_driver/src_backup/: DucoDriver.cpp  DucoDriverNode.cpp  DucoRobotControl.cpp  DucoRobotStatusNode.cpp  DucoTrajectoryAction.cpp  RobotNode.cpp
colcon_ws/src/joint_position_controller/: CMakeLists.txt  README.md  joint_position_controller.xml  package.xml
colcon_ws/src/joint_position_controller/src/: joint_position_controller.cpp
colcon_ws/src/leadshine_motor/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/leadshine_motor/config/: motor1.yaml
colcon_ws/src/leadshine_motor/launch/: jog_motor.launch.py  motor_control_launch.py  test_motor_simulation_launch.py
colcon_ws/src/leadshine_motor/leadshine_motor/: jog_node.py  motor_controller.py  motor_node.py  motor_simulation_node.py
colcon_ws/src/lift_robot_force_sensor_2/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/lift_robot_force_sensor_2/launch/: lift_robot_force_sensor_launch.py
colcon_ws/src/lift_robot_force_sensor_2/lift_robot_force_sensor_2/: __init__.py  force_sensor_controller.py  force_sensor_node.py
colcon_ws/src/lift_robot_force_sensor_test/: package.xml  setup.cfg  setup.py
colcon_ws/src/lift_robot_force_sensor_test/launch/: lift_robot_force_sensor_test_launch.py
colcon_ws/src/lift_robot_force_sensor_test/lift_robot_force_sensor_test/: force_sensor_node_test.py
colcon_ws/src/lift_robot_interfaces/: CMakeLists.txt  package.xml
colcon_ws/src/lift_robot_interfaces/action/: ForceControl.action  GotoHeight.action  HybridControl.action  ManualMove.action  StopMovement.action
colcon_ws/src/lift_robot_platform/: CONTROL_MODES.md  MANUAL_DOWN_DETECTION.md  README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/lift_robot_platform/launch/: lift_robot_launch.py
colcon_ws/src/lift_robot_platform/lift_robot_platform/: lift_robot_controller.py  lift_robot_node.py  lift_robot_node_action.py
colcon_ws/src/lift_robot_platform/test/: test_lift_robot.py
colcon_ws/src/lift_robot_pushrod/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/lift_robot_pushrod/launch/: lift_robot_pushrod_launch.py
colcon_ws/src/lift_robot_pushrod/lift_robot_pushrod/: __init__.py  pushrod_controller.py  pushrod_node.py
colcon_ws/src/lift_robot_web/: README.md  TASK_STATUS_GUIDE.md  package.xml  setup.cfg  setup.py
colcon_ws/src/mock_ur_visualization/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/modbus_driver/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/modbus_driver_interfaces/: CMakeLists.txt  package.xml
colcon_ws/src/robot_control/: CMakeLists.txt  package.xml
colcon_ws/src/robot_status/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/robot_status_redis/: CMakeLists.txt  README.md  package.xml
(+955 files in other folders)
