<?xml version="1.0"?>
<package format="3">
  <name>cam</name>
  <version>0.1.0</version>
  <description>Camera snapshot node with retry and auto-restart capability.</description>
  <maintainer email="your_email@domain.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>requests</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 