<?xml version="1.0"?>
<package format="3">
  <name>cam_node</name>
  <version>0.1.0</version>
  <description>Node for providing camera snapshot service via ROS2.</description>
  <maintainer email="yizhongzhang1989@gmail.com">yizhongzhang1989</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
