<?xml version="1.0"?>
<package format="3">
  <name>draw_wire_sensor</name>
  <version>0.1.0</version>
  <description>Draw wire sensor (renamed from lift_robot_cable_sensor) providing position registers via Modbus.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
