<?xml version="1.0"?>
<package format="3">
  <name>duco_gcr5_910_urdf</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for duco_gcr5_910_urdf robot arm.
    This package contains configuration data, 3D models and launch files
    for duco_gcr5_910_urdf robot.
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>rosbridge_server</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>