<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>duco_hardware</name>
  <version>0.0.0</version>
  <description>Official ROS2 Control hardware interface for DUCO robots</description>
  <maintainer email="robot@duco.com">DUCO Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
