<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duco_ros_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="oem@todo.todo">oem</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>duco_support</build_depend>
  <build_depend>duco_msg</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>duco_support</exec_depend>
  <exec_depend>duco_msg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
