<package format="3">
  <name>leadshine_motor</name>
  <version>0.0.1</version>
  <description>ROS 2 node for controlling Leadshine motor over Modbus</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>modbus_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
