<?xml version="1.0"?>
<package format="3">
  <name>lift_robot_force_sensor_2</name>
  <version>0.1.0</version>
  <description>Lift robot second single-channel force sensor reader (Modbus FC03) device_id=53</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>modbus_driver_interfaces</exec_depend>
  <exec_depend>modbus_devices</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
