<?xml version="1.0"?>
<package format="3">
  <name>lift_robot_pushrod</name>
  <version>0.0.0</version>
  <description>ROS2 package for controlling lift robot pushrod via Modbus relays CH5/CH6.</description>
  <maintainer email="user@example.com">Robot User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>modbus_devices</depend>
  <exec_depend>modbus_driver</exec_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
