<?xml version="1.0"?>
<package format="3">
  <name>lift_robot_web</name>
  <version>0.1.0</version>
  <description>Lift robot simple web viewer for cable sensor data.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
