<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mock_ur_visualization</name>
  <version>0.0.1</version>
  <description>
    Lightweight RViz visualization of a real or simulated UR robot.
    Polls the UR primary URScript port for joint angles and republishes them
    as sensor_msgs/JointState, then drives a robot_state_publisher + RViz
    pipeline. No ur_robot_driver / ros2_control required — works with URSim
    or a physical UR arm out of the box.
  </description>
  <maintainer email="dev@example.com">robot_dc</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_robot_arm</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
