<package format="3">
  <name>modbus_driver</name>
  <version>0.0.1</version>
  <description>Python Modbus RTU driver module for use by other ROS packages</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
