<package format="3">
  <name>modbus_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 Modbus Driver</description>
  <maintainer email="yizhongzhang1989@gmail.com">Yizhong Zhang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>modbus_driver_interfaces</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pymodbus</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>modbus_driver_interfaces</exec_depend>
  <exec_depend>common</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
